@@ -483,4 +483,15 @@ however, we need the complication for Perl. ---/
 /(?&t)(?#()(?(DEFINE)(?<t>a))/
     bac
 
+/--- COMMIT should override THEN ---/
+
+/(?>(*COMMIT)(?>yes|no)(*THEN)(*F))?/
+  yes
+
+/(?>(*COMMIT)(yes|no)(*THEN)(*F))?/
+  yes
+
+/^((yes|no)(*THEN)(*F))?/
+  yes
+
 /-- End of testinput11 --/
